--- a/Site/kontakt.html
+++ b/Site/kontakt.html
@@ -13,6 +13,7 @@ t.nordenmark@gmail.com
 		<title>Flygbolaget Kraschlanda AB</title>
 		<meta name="description" content="Allt du behöver för att känna dig otrygg i luftrummet!">
         <meta name="author" content="Thomas Nordenmark">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
             
         <link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -20,7 +21,7 @@ t.nordenmark@gmail.com
         <script type="text/javascript" src="js/main.js"></script>
 	</head>
 
-	<body onload="browserDetect()">
+	<body>
 		<header id="header">
             <a href="index.html">
                 <img id="mainlogo" src="img/kraschlanda_logotr_small.png" alt="Kraschlanda logo">
