--- a/Site/index.html
+++ b/Site/index.html
@@ -13,6 +13,7 @@ t.nordenmark@gmail.com
 		<title>Flygbolaget Kraschlanda AB</title>
 		<meta name="description" content="Allt du behöver för att känna dig otrygg i luftrummet!">
         <meta name="author" content="Thomas Nordenmark">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
             
         <link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
