--- a/Site/om_oss.html
+++ b/Site/om_oss.html
@@ -12,10 +12,13 @@ t.nordenmark@gmail.com
 
 		<title>Flygbolaget Kraschlanda AB</title>
 		<meta name="description" content="Allt du behöver för att känna dig otrygg i luftrummet!">
-        <meta name="author" content="Thomas Nordenmark">
+        <meta name="author" content="Thomas Nordenmark" >
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
             
         <link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		
+		<script type="text/javascript" src="js/main.js"></script>
 	</head>
 
 	<body>
@@ -37,32 +40,36 @@ t.nordenmark@gmail.com
             <article id="article">
 				<h3>Om oss</h3>
                 <br>
-				<p id="bodytext">Bacon ipsum dolor sit amet meatball tongue pork chop, biltong beef ribs pork
-				t-bone bacon. Capicola chicken pork turkey beef. Shankle beef ribs porchetta jerky
-				frankfurter pastrami sausage. Fatback sausage cow t-bone pancetta, pork belly
-				short loin shank brisket.
-				<br>
-				<br>
-				Turkey flank sausage ham. Filet mignon turkey t-bone shoulder, ribeye pork loin
-				tail landjaeger swine bacon meatball ham hock. Jowl pork belly bacon, chuck
-				meatball strip steak landjaeger tenderloin pork swine. Tri-tip pork chop bacon,
-				venison leberkas ribeye frankfurter kielbasa filet mignon hamburger tail flank.
-				Shoulder pork turkey short loin. Bresaola turducken frankfurter meatball swine,
-				kevin strip steak t-bone. Sausage drumstick strip steak tri-tip ham ground round
-				pastrami, turducken ribeye prosciutto corned beef.
-				<br>
-				<br>
-				Bacon ipsum dolor sit amet swine short loin t-bone flank sirloin landjaeger.
-				Capicola shoulder corned beef, ground round brisket short ribs beef tri-tip
-				turducken pork filet mignon ham hamburger flank. Sausage hamburger leberkas
-				ball tip tail short loin venison fatback meatball tri-tip ground round pork
-				loin. Ribeye tri-tip bacon sirloin, kevin hamburger ham beef pork belly
-				pancetta pastrami. Leberkas meatball shank shoulder meatloaf.</p>
+    			<br>
+    			<br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
                 <br>
 			</article>
 		</main>
 		
-		<div id="horizontal_line"></div>
+		<div class="staff" id="staffimagecontainer">
+            <img id="staffimage">
+            <div id = "stafftitle"></div>
+            <div id="staffthumbs"></div>
+        </div>
+            
+        <div class="staff" id="horizontal_line"></div>
 		
 		<footer id="footer" role="contentinfo">
 			<p id="footertext">
